Add different scenario for the game. Add reset button logic. Change some styles. Add classes to buttons for js logic

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <button class="btn">Again!</button>
+      <button class="btn again">Again!</button>
       <h1 class="title">Guess my number</h1>
       <p class="description">"Between 1 and 20"</p>
       <div class="number">?</div>
@@ -22,7 +22,7 @@
     <main>
       <section class="check-number">
         <input type="number" class="your-number" />
-        <button class="btn">Check!</button>
+        <button class="btn check">Check!</button>
       </section>
       <section class="stats">
         <p class="message">Start guessing...</p>
