--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <button class="btn check">Check!</button>
       </section>
       <section class="stats">
-        <p class="message">Start guessing...</p>
+        <p class="message">Enter your guess!</p>
         <p class="label-score">Score: <span class="score">20</span></p>
         <p class="label-highscore">
           Highscore: <span class="highscore">0</span>
